--- a/public/test.html
+++ b/public/test.html
@@ -1,13 +1,14 @@
 <html>
 <head>
+</head>
+<body>
+<div>
 	<script
 		type='text/javascript'
 		src='http://localhost:3000/restaurant_menu.js'>
 
 	</script>
-</head>
-<body>
-<div>
+	<object width='100%' height='100%' data='http://localhost:3000/restaurants/AREPAS_&_CACHAPAS?u=da39a3ee5e6b4b0d3255bfef95601890afd80709'></object>
 	<div id='restaurant-menu' data-u='da39a3ee5e6b4b0d3255bfef95601890afd80709' data-name='AREPAS_&_CACHAPAS'></div>
 </div>
 </body>
